--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.0.2",
     "vite": "^5.0.0"
   }
 }
