--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-with-important-style": "^0.2.2",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.1"
   },
