--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-firebase/auth": "^0.2.10",
     "bootstrap": "^5.3.2",
-    "firebase": "^10.1.0",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
     "react-with-important-style": "^0.2.2",
     "styled-components": "^6.0.7",
