--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.5",
     "react-image-crop": "^11.0.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
