--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@popperjs/core": "^2.11.8",
     "@react-firebase/auth": "^0.2.10",
     "bootstrap": "^5.3.2",
