--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-firebase/auth": "^0.2.10",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -28,6 +29,7 @@
     "styled-reset": "^4.5.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/styled-components": "^5.1.32",
